// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoaderFactory create multi: false returns the first matching result 1`] = `
{
  "code": "abc",
  "id": 1,
  "name": "aaa",
}
`;

exports[`LoaderFactory create multi: true gets all matching results 1`] = `
[
  {
    "code": "abc",
    "id": 1,
    "name": "aaa",
  },
  {
    "code": "abc",
    "id": 7,
    "name": "AAA",
  },
]
`;

exports[`LoaderFactory create when inferring multi from an extended loader gets all matching results 1`] = `
[
  {
    "code": "abc",
    "id": 1,
    "name": "aaa",
  },
  {
    "code": "abc",
    "id": 7,
    "name": "AAA",
  },
]
`;

exports[`LoaderFactory create with a multi-column loader multi: false gets all matching results 1`] = `
{
  "code": "abc",
  "id": 1,
  "name": "aaa",
}
`;

exports[`LoaderFactory create with a multi-column loader multi: true gets all matching results 1`] = `
[
  {
    "code": "abc",
    "id": 1,
    "name": "aaa",
  },
]
`;

exports[`LoaderFactory create with a multi-column loader with a callback function gets all matching results 1`] = `
{
  "code": "abc",
  "id": 1,
  "name": "aaa",
}
`;
